@@ -50,6 +50,7 @@ import de.uni_freiburg.informatik.ultimate.model.acsl.ast.IfThenElseExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.IntegerLiteral;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.LoopInvariant;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.OldValueExpression;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.QuantifierExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.RealLiteral;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.Requires;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.UnaryExpression;
@@ -95,46 +96,49 @@ public class ACSLPrettyPrinter {
 	}
 
 	private static String printExpression(final Expression expression) {
-		switch (expression) {
-		case final BooleanLiteral boolLit:
-			return "\\" + boolLit.getValue();
-		case final IntegerLiteral intLit:
-			return intLit.getValue();
-		case final RealLiteral realLit:
-			return realLit.getValue();
-		case final IdentifierExpression id:
-			return id.getIdentifier();
-		case final BinaryExpression bin:
-			return printBinaryExpression(bin);
-		case final UnaryExpression unary:
-			return printUnaryExpression(unary);
-		case final IfThenElseExpression ite:
-			return String.format("(%s ? %s : %s)", printExpression(ite.getCondition()),
-					printExpression(ite.getThenPart()), printExpression(ite.getElsePart()));
-		case final ValidExpression valid:
-			return String.format("\\valid(%s)", printExpression(valid.getFormula()));
-		case final FieldAccessExpression f:
-			return String.format("(%s).%s", printExpression(f.getStruct()), f.getField());
-		case final OldValueExpression old:
-			return String.format("\\old(%s)", printExpression(old.getFormula()));
-		case final ArrayAccessExpression arrayAccess:
-			return printArrayAccessExpression(arrayAccess);
-		case final CastExpression cast:
-			return String.format("(%s) %s", cast.getCastedType().getTypeName(), printExpression(cast.getExpression()));
-		case final ACSLResultExpression res:
-			return "\\result";
-		case final AtLabelExpression at:
-			return String.format("\\at(%s, %s)", printExpression(at.getFormula()), at.getLabel());
-		default:
-			// TODO: Add more cases
-			return expression.toString();
-		}
+		return switch (expression) {
+		case final ACSLResultExpression res -> "\\result";
+		case final ArrayAccessExpression arrayAccess ->
+				"%s[%s]".formatted(printExpression(arrayAccess.getArray()), printExpression(arrayAccess.getIndex()));
+		// TODO ArrayStoreExpression
+		case final AtLabelExpression at -> "\\at(%s, %s)".formatted(printExpression(at.getExpression()), at.getLabel());
+		// TODO BaseAddrExpression
+		case final BinaryExpression bin -> printBinaryExpression(bin);
+		// TODO BitvecLiteral
+		// TODO BitVectorAccessExpression
+		// TODO BlockLengthExpression
+		case final BooleanLiteral boolLit -> "\\" + boolLit.getValue();
+		case final CastExpression cast ->
+				"(%s) %s".formatted(cast.getCastedType().getTypeName(), printExpression(cast.getExpression()));
+		case final FieldAccessExpression f -> "(%s).%s".formatted(printExpression(f.getStruct()), f.getField());
+		// TODO FreeableExpression
+		// TODO FunctionApplication
+		case final IdentifierExpression id -> id.getIdentifier();
+		case final IfThenElseExpression ite -> "(%s ? %s : %s)".formatted(printExpression(ite.getCondition()),
+				printExpression(ite.getThenPart()), printExpression(ite.getElsePart()));
+		case final IntegerLiteral intLit -> intLit.getValue();
+		// TODO MallocableExpression
+		// TODO NotDefinedExpression
+		// TODO NullPointer
+		case final OldValueExpression old -> "\\old(%s)".formatted(printExpression(old.getExpression()));
+		case final QuantifierExpression quantifier -> printQuantifierExpression(quantifier);
+		case final RealLiteral realLit -> realLit.getValue();
+		// TODO SizeOfExpression
+		// TODO StringLiteral
+		// TODO SyntacticNamingExpression
+		case final UnaryExpression unary -> printUnaryExpression(unary);
+		case final ValidExpression valid -> "\\valid(%s)".formatted(printExpression(valid.getExpression()));
+		// TODO WildCardExpression
+
+		default -> expression.toString();
+		};
 	}
 
-	private static String printArrayAccessExpression(final ArrayAccessExpression expression) {
-		return printExpression(expression.getArray()) + "["
-				+ Arrays.stream(expression.getIndices()).map(x -> printExpression(x)).collect(Collectors.joining(", "))
-				+ "]";
+	private static String printQuantifierExpression(final QuantifierExpression quantifier) {
+		final String quantor = quantifier.isUniversal() ? "\\forall" : "\\exists";
+		final String vars = Arrays.stream(quantifier.getVariables())
+				.map(x -> x.getType().getTypeName() + " " + x.getName()).collect(Collectors.joining(", "));
+		return "%s %s; %s".formatted(quantor, vars, printExpression(quantifier.getSubformula()));
 	}
 
 	private static String printUnaryExpression(final UnaryExpression expression) {
